-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17, 20
-
Component/s: hotspot
-
b13
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8315145 | 17.0.10-oracle | Calvin Cheung | P4 | Resolved | Fixed | b01 |
| JDK-8310465 | 17.0.9 | Aleksey Shipilev | P4 | Resolved | Fixed | b01 |
ConstantPool::print_on does:
st->print_cr(" - resolved_references: " INTPTR_FORMAT, p2i(resolved_references()));
but resolved_references() does:
return (objArrayOop)_cache->resolved_references();
which will crash is _cache is NULL.
print_on should be using resolved_references_or_null().
It would also be useful for print_on to report the CP length before starting to iterate the contents.
st->print_cr(" - resolved_references: " INTPTR_FORMAT, p2i(resolved_references()));
but resolved_references() does:
return (objArrayOop)_cache->resolved_references();
which will crash is _cache is NULL.
print_on should be using resolved_references_or_null().
It would also be useful for print_on to report the CP length before starting to iterate the contents.
- backported by
-
JDK-8310465 ConstantPool::print_on can crash if _cache is NULL
-
- Resolved
-
-
JDK-8315145 ConstantPool::print_on can crash if _cache is NULL
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/2e5a402a
-
Commit
openjdk/jdk/9424d6d4
-
Review
openjdk/jdk17u-dev/1467
-
Review
openjdk/jdk/10059
(1 links to)