8293012: ConstantPool::print_on can crash if _cache is NULL

Backport-of: 9424d6d487db4ad0f6f671a8c33b8f169794fe25